Refactor island snapshot handling and improve player name retrieval in commands