@@ -122,11 +122,7 @@ public class AdminUncoopCommand implements SubCommand, AsyncTabComplete {
                         return CompletableFuture.completedFuture(Collections.<String>emptyList());
                     }
 
-                    List<CompletableFuture<String>> nameFutures = coopedPlayers.stream().map(uuid -> api.getPlayerName(uuid).thenApply(nameOpt -> nameOpt.orElse(uuid.toString()))).toList();
-
-                    CompletableFuture<Void> all = CompletableFuture.allOf(nameFutures.toArray(new CompletableFuture[0]));
-
-                    return all.thenApply(v -> nameFutures.stream().map(CompletableFuture::join).filter(name -> name.toLowerCase(Locale.ROOT).startsWith(prefix)).sorted(String.CASE_INSENSITIVE_ORDER).collect(Collectors.toList()));
+                    return api.getPlayerNames(coopedPlayers).thenApply(nameMap -> coopedPlayers.stream().map(uuid -> nameMap.getOrDefault(uuid, uuid.toString())).filter(name -> name.toLowerCase(Locale.ROOT).startsWith(prefix)).sorted(String.CASE_INSENSITIVE_ORDER).collect(Collectors.toList()));
                 }));
             }).exceptionally(ex -> Collections.emptyList());
         }
